Closed Bug 411311 Opened 17 years ago Closed 17 years ago

Ensure that we never try to write bookmarks before we finish loading them

Categories

(Camino Graveyard :: Bookmarks, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.12)

Attachments

(1 file)

I was looking for any possible holes in the bookmark write logic because of a report that someone had a truncated but loadable bookmark file after a crash, and it appears that it's theoretically possible for someone with a very large bookmark file to launch and then immediately quit Camino and lose some bookmarks as a result. I'm not sure it's even practically possible (and it couldn't have been what happened to the user, since it can only be triggered by a shutdown, and he had a crash), but it can't hurt to check explicitly.
Attached patch fixSplinter Review
I'm loving this thing were I'm getting initial attachments silently dropped sometimes :P
Attachment #295981 - Flags: superreview?(mark)
Attachment #295981 - Flags: superreview?(mark) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: fixed1.8.1.12
Resolution: --- → FIXED
Target Milestone: --- → Camino1.6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: