Camino only - Bug 411311: Ensure that we never write bookmarks before they finish loading. r/sr=mento